# imu_phyphox

./: Cargo.toml  README.md  Raw Data.csv  acceleration_analysis.ipynb  baseline.ipynb  create_tables.sql  data_processing.py  displacement.ipynb  docker-compose.yml  requirements.txt  test1.ipynb  test2.ipynb  test3.ipynb  thesis_plots.ipynb
Acceleration without g 2023-03-26 13-11-36/: Raw Data.csv
Acceleration without g 2023-03-26 13-13-54/meta/: time.csv
Acceleration without g 2023-03-26 13-19-24/meta/: device.csv  time.csv
automation/: data_processing.py  db_integration.py  main.py
backend/: endpoints.py  main.py
backend/automation/: data_processing.py  db_integration.py
backend/templates/: acknowledgment.html  error.html  index.html
data/: manual_measurements.csv
data/Acceleration without g 2023-03-26 13-07-06/: Raw Data.csv
data/Acceleration without g 2023-03-26 13-13-54/: Raw Data.csv
data/Acceleration without g 2023-03-26 13-19-24/: Raw Data.csv
data/Acceleration without g 2024-01-17 08-13-47/: Raw Data.csv
data/Acceleration without g 2024-01-17 08-15-45/: Raw Data.csv
data/Acceleration without g 2024-01-17 08-17-32/: Raw Data.csv
data/Acceleration without g 2024-01-17 08-35-37/: Raw Data.csv
data/Acceleration without g 2024-01-20 17-52-51/: Raw Data.csv
data/Acceleration without g 2024-01-20 17-57-26/: Raw Data.csv
imu-backend/: Cargo.toml  Dockerfile
imu-backend/src/: constants.rs  data_processing.rs  errors.rs  lib.rs  main.rs
imu-backend/src/helpers/: files.rs  filtering.rs  mod.rs
imu-backend/src/models/: imudata.rs  mod.rs
imu-backend/src/routes/: imudata.rs
init/: create_tables.sql
sample_queries/: sample_queries.sql
web-app/imudata/: package.json
(+48 files in other folders)
