[package]
name = "imu-backend"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "Backend for the IMU project"

[dependencies]
actix = "0.13"
actix-rt = "2"
actix-web = "4"
actix-files = "0.6"
actix-http = { version = "3", features = ["http2", "ws"] }
anyhow = "1"
base64 = "0.21"
csv = "1.1.6"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4"
sci-rs = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.50"

[features]
default = []
test = []
